--- a/Abby/Pages/Categories/Index.cshtml
+++ b/Abby/Pages/Categories/Index.cshtml
@@ -7,6 +7,9 @@
             <h2 class="text-primary">Categories</h2>
         </div>
         <div class="col-6">
+            <a asp-page="create" class="btn btn-primary">
+                Create New Category
+            </a>
         </div>
     </div>
     
