--- a/Abby/Pages/Categories/Create.cshtml
+++ b/Abby/Pages/Categories/Create.cshtml
@@ -2,18 +2,18 @@
 @model Abby.Pages.Categories.CreateModel
 
 <form method="post">
-	<div class="border p-3 mt-4">
+	<div class="border p-3 mt-4 col-6">
 		<div class="row pb-2">
 			<h2 class="text-primary pl-3">Create Category</h2>
 			<hr />
 		</div>
 		<div class="mb-3">
-			Name:
-			<input type="text" name="categoryName" />
+			<label asp-for="@Model.Category.Name"></label>
+			<input asp-for="Category.Name" class="form-control" />
 		</div>
 		<div class="mb-3">
-			Display Order:
-			<input type="text" name="displayOrder" />
+			<label asp-for="@Model.Category.DisplayOrder"></label>
+			<input asp-for="Category.DisplayOrder" class="form-control" />
 		</div>
 		<button type="submit" class="btn btn-primary" style="width:150px;">Create</button>
 	</div>
