--- a/Abby/Pages/Categories/Index.cshtml
+++ b/Abby/Pages/Categories/Index.cshtml
@@ -6,7 +6,7 @@
         <div class="col-6">
             <h2 class="text-primary">Categories</h2>
         </div>
-        <div class="col-6">
+        <div class="col-6 text-end">
             <a asp-page="create" class="btn btn-primary">
                 Create New Category
             </a>
