--- a/Abby/Pages/Categories/Index.cshtml
+++ b/Abby/Pages/Categories/Index.cshtml
@@ -8,7 +8,7 @@
         </div>
         <div class="col-6 text-end">
             <a asp-page="create" class="btn btn-primary">
-                Create New Category
+                <i class="bi bi-pencil-square"></i> &nbsp; Create New Category
             </a>
         </div>
     </div>
