--- a/Abby/Pages/Categories/Create.cshtml
+++ b/Abby/Pages/Categories/Create.cshtml
@@ -7,7 +7,7 @@
 			<h2 class="text-primary pl-3">Create Category</h2>
 			<hr />
 		</div>
-		<div asp-validation-summary="All" class="text-danger"></div>
+		@*<div asp-validation-summary="All" class="text-danger"></div>*@
 		<div class="mb-3">
 			<label asp-for="@Model.Category.Name"></label>
 			<input asp-for="Category.Name" class="form-control" />
@@ -21,3 +21,8 @@
 		<button type="submit" class="btn btn-primary" style="width:150px;">Create</button>
 	</div>
 </form>
+
+@section Scripts
+{
+	<partial name="_ValidationScriptsPartial" />
+}
