--- a/Abby/Pages/Categories/Index.cshtml
+++ b/Abby/Pages/Categories/Index.cshtml
@@ -7,8 +7,8 @@
             <h2 class="text-primary">Categories</h2>
         </div>
         <div class="col-6 text-end">
-            <a asp-page="create" class="btn btn-primary">
-                <i class="bi bi-pencil-square"></i> &nbsp; Create New Category
+            <a asp-page="Create" class="btn btn-primary">
+                <i class="bi bi-plus-square"></i> &nbsp; New Category
             </a>
         </div>
     </div>
@@ -18,18 +18,27 @@
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
-                <th>Category Name</th>
-                <th>Display Order</th>
-                <th>Date Created</th>
+                <th class="col-4">Category Name</th>
+                <th class="col-3">Display Order</th>
+                <th class="col-3">Date Created</th>
+                <th class="col-2"></th>
             </tr>
         </thead>
         <tbody>
             @foreach (var category in Model.Categories)
             {
                 <tr>
-                    <td>@category.Name</td>
-                    <td>@category.DisplayOrder</td>
-                    <td>@category.CreatedDateTime.ToShortDateString()</td>
+                    <td class="col-4">@category.Name</td>
+                    <td class="col-3">@category.DisplayOrder</td>
+                    <td class="col-3">@category.CreatedDateTime.ToShortDateString()</td>
+                    <td class="col-2">
+                        <a asp-page="Edit" asp-route-id="@category.Id" class="btn btn-primary mx-2">
+                            <i class="bi bi-pencil-square"></i>
+                        </a>
+                        <a asp-page="Delete" asp-route-id="@category.Id" class="btn btn-danger mx-2">
+                            <i class="bi bi-trash3"></i>
+                        </a>
+                    </td>
                 </tr>
             }
         </tbody>
