--- a/Abby/Pages/Categories/Delete.cshtml
+++ b/Abby/Pages/Categories/Delete.cshtml
@@ -1,29 +1,25 @@
 ﻿@page
-@model Abby.Pages.Categories.CreateModel
+@model Abby.Pages.Categories.DeleteModel
 
 <form method="post">
+	<input hidden asp-for="Category.Id" />
 	<div class="border p-3 mt-4 col-6">
 		<div class="row pb-2">
-			<h2 class="text-primary pl-3">Create Category</h2>
+			<h2 class="text-primary pl-3">Delete Category</h2>
 			<hr />
 		</div>
 		@*<div asp-validation-summary="All" class="text-danger"></div>*@
 		<div class="mb-3">
 			<label asp-for="@Model.Category.Name"></label>
-			<input asp-for="Category.Name" class="form-control" />
+			<input asp-for="Category.Name" class="form-control" disabled />
 			<span asp-validation-for="Category.Name" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="@Model.Category.DisplayOrder"></label>
-			<input asp-for="Category.DisplayOrder" class="form-control" />
+			<input asp-for="Category.DisplayOrder" class="form-control" disabled />
 			<span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
 		</div>
-		<button type="submit" class="btn btn-primary" style="width:150px;">Create</button>
+		<button type="submit" class="btn btn-primary" style="width:150px;">Delete</button>
 		<a class="btn btn-secondary" asp-page="Index" style="width:150px;">Cancel</a>
 	</div>
 </form>
-
-@section Scripts
-{
-	<partial name="_ValidationScriptsPartial" />
-}
