--- a/Abby/Pages/Categories/Edit.cshtml
+++ b/Abby/Pages/Categories/Edit.cshtml
@@ -20,7 +20,7 @@
 			<span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
 		</div>
 		<button type="submit" class="btn btn-primary" style="width:150px;">Update</button>
-		<a class="btn btn-danger" asp-page="Index" style="width:150px;">Cancel</a>
+		<a class="btn btn-secondary" asp-page="Index" style="width:150px;">Cancel</a>
 	</div>
 </form>
 
