--- a/Abby/Pages/Categories/Index.cshtml
+++ b/Abby/Pages/Categories/Index.cshtml
@@ -18,23 +18,24 @@
     <table class="table table-bordered table-hover">
         <thead>
             <tr>
-                <th class="col-4">Category Name</th>
-                <th class="col-3">Display Order</th>
+                <th class="col-5">Category Name</th>
+                <th class="col-2">Display Order</th>
                 <th class="col-3">Date Created</th>
-                <th class="col-2"></th>
+                <th class="col-2 text-center">Edit | Delete</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var category in Model.Categories)
             {
                 <tr>
-                    <td class="col-4">@category.Name</td>
-                    <td class="col-3">@category.DisplayOrder</td>
-                    <td class="col-3">@category.CreatedDateTime.ToShortDateString()</td>
-                    <td class="col-2">
+                    <td>@category.Name</td>
+                    <td>@category.DisplayOrder</td>
+                    <td>@category.CreatedDateTime.ToShortDateString()</td>
+                    <td class="text-center">
                         <a asp-page="Edit" asp-route-id="@category.Id" class="btn btn-primary mx-2">
                             <i class="bi bi-pencil-square"></i>
                         </a>
+                        |
                         <a asp-page="Delete" asp-route-id="@category.Id" class="btn btn-danger mx-2">
                             <i class="bi bi-trash3"></i>
                         </a>
