--- a/Abby/Pages/Categories/Index.cshtml
+++ b/Abby/Pages/Categories/Index.cshtml
@@ -15,7 +15,7 @@
     
     <br /><br />
 
-    <table class="table table-bordered table-hover">
+    <table class="table table-bordered table-hover table-striped">
         <thead>
             <tr>
                 <th class="col-5">Category Name</th>
