Use TempData for Success Notifications

--- a/Abby/Pages/Categories/Delete.cshtml
+++ b/Abby/Pages/Categories/Delete.cshtml
@@ -12,14 +12,12 @@
 		<div class="mb-3">
 			<label asp-for="@Model.Category.Name"></label>
 			<input asp-for="Category.Name" class="form-control" disabled />
-			<span asp-validation-for="Category.Name" class="text-danger"></span>
 		</div>
 		<div class="mb-3">
 			<label asp-for="@Model.Category.DisplayOrder"></label>
 			<input asp-for="Category.DisplayOrder" class="form-control" disabled />
-			<span asp-validation-for="Category.DisplayOrder" class="text-danger"></span>
 		</div>
-		<button type="submit" class="btn btn-primary" style="width:150px;">Delete</button>
+		<button type="submit" class="btn btn-danger" style="width:150px;">Delete</button>
 		<a class="btn btn-secondary" asp-page="Index" style="width:150px;">Cancel</a>
 	</div>
 </form>
