--- a/Abby/Pages/Shared/_Layout.cshtml
+++ b/Abby/Pages/Shared/_Layout.cshtml
@@ -36,8 +36,8 @@
                                 <a class="dropdown-item" href="https://www.r-net.tech">Home</a>
                                 <a class="dropdown-item" href="https://www.r-net.tech:4442">ASP.NET Framework 4.8 - Vidly</a>
                                 <a class="dropdown-item" href="https://www.r-net.tech:4443">ASP.NET Core 6 - BulkyBook</a>
-                                @*<div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Separated link</a>*@
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="https://github.com/r-net-inc">GitHub</a>
                             </div>
                         </li>
                     </ul>
